changd color to brown

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Basic Git</title>
     </head>
     <body>
-        Hello World!
+       <p style="color: brown;"> Hello World!</p>
     </body>
 </html>
