--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
        <p style="color: brown;"> Hello World!</p>
+       <p>Welcome to SFMIS Team</p>
     </body>
 </html>
